--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
     "url": "https://github.com/phonowell/js-shim/issues"
   },
   "dependencies": {
-    "coffee-ahk": "0.0.4",
-    "fire-keeper": "0.0.176",
-    "ts-node": "^9.0.0",
+    "coffee-ahk": "0.0.8",
+    "fire-keeper": "^0.0.176",
+    "ts-node": "^9.1.0",
     "typescript": "^4.1.2"
   },
   "description": "",
@@ -19,8 +19,9 @@
     "ahk",
     "auto hotkey",
     "coffee-ahk",
-    "genshin",
-    "genshin impact"
+    "js",
+    "js-shim",
+    "shim"
   ],
   "license": "MIT",
   "name": "js-shim",
