--- a/package.json
+++ b/package.json
@@ -4,15 +4,15 @@
     "url": "https://github.com/phonowell/js-shim/issues"
   },
   "dependencies": {
-    "coffee-ahk": "0.0.26",
+    "coffee-ahk": "^0.0.27",
     "fire-keeper": "0.0.185",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3"
   },
   "description": "",
   "devDependencies": {
-    "@types/lodash": "^4.14.167",
-    "@types/node": "^14.14.19"
+    "@types/lodash": "^4.14.168",
+    "@types/node": "^14.14.22"
   },
   "homepage": "https://github.com/phonowell/js-shim",
   "keywords": [
@@ -24,6 +24,7 @@
     "shim"
   ],
   "license": "MIT",
+  "main": "dist/index.ahk",
   "name": "js-shim",
   "repository": {
     "type": "git",
