--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "url": "https://github.com/phonowell/js-shim/issues"
   },
   "dependencies": {
-    "coffee-ahk": "^0.0.27",
+    "coffee-ahk": "^0.0.28",
     "fire-keeper": "0.0.185",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3"
@@ -12,7 +12,10 @@
   "description": "",
   "devDependencies": {
     "@types/lodash": "^4.14.168",
-    "@types/node": "^14.14.22"
+    "@types/node": "^14.14.22",
+    "@typescript-eslint/eslint-plugin": "^4.14.1",
+    "@typescript-eslint/parser": "^4.14.1",
+    "eslint": "^7.19.0"
   },
   "homepage": "https://github.com/phonowell/js-shim",
   "keywords": [
@@ -25,7 +28,7 @@
   ],
   "license": "MIT",
   "main": "dist/index.ahk",
-  "name": "js-shim",
+  "name": "js-shim.ahk",
   "repository": {
     "type": "git",
     "url": "https://github.com/phonowell/js-shim.git"
@@ -35,5 +38,5 @@
     "build": "npm run alice build"
   },
   "url": "https://github.com/phonowell/js-shim",
-  "version": "0.0.1"
+  "version": "0.0.2"
 }
