--- a/package.json
+++ b/package.json
@@ -5,16 +5,16 @@
   },
   "dependencies": {
     "coffee-ahk": "^0.0.28",
-    "fire-keeper": "0.0.185",
+    "fire-keeper": "^0.0.185",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3"
   },
   "description": "",
   "devDependencies": {
     "@types/lodash": "^4.14.168",
-    "@types/node": "^14.14.22",
-    "@typescript-eslint/eslint-plugin": "^4.14.1",
-    "@typescript-eslint/parser": "^4.14.1",
+    "@types/node": "^14.14.25",
+    "@typescript-eslint/eslint-plugin": "^4.14.2",
+    "@typescript-eslint/parser": "^4.14.2",
     "eslint": "^7.19.0"
   },
   "homepage": "https://github.com/phonowell/js-shim",
@@ -38,5 +38,5 @@
     "build": "npm run alice build"
   },
   "url": "https://github.com/phonowell/js-shim",
-  "version": "0.0.2"
+  "version": "0.0.3"
 }
